[project]
name = "lerffusion"
version = "0.1.0"

dependencies=[
    "nerfstudio",
    "clip @ git+https://github.com/openai/CLIP.git",
    "diffusers>=0.14.0.dev0",
    "transformers>=4.26.1",
    "accelerate",
    "yolov5",
]

# black
[tool.black]
line-length = 120

# pylint
[tool.pylint.messages_control]
max-line-length = 120
generated-members = ["numpy.*", "torch.*", "cv2.*", "cv.*"]
good-names-rgxs = "^[_a-zA-Z][_a-z0-9]?$"
ignore-paths = ["scripts/colmap2nerf.py"]
jobs = 0
ignored-classes = ["TensorDataclass"]

disable = [
  "duplicate-code",
  "fixme",
  "logging-fstring-interpolation",
  "too-many-arguments",
  "too-many-branches",
  "too-many-instance-attributes",
  "too-many-locals",
  "unnecessary-ellipsis",
]

[tool.setuptools.packages.find]
include = ["lerffusion"]

[project.entry-points.'nerfstudio.method_configs']
lerffusion = 'lerffusion.lf_config:lerffusion_method'
in2n_small = 'lerffusion.lf_config:lerffusion_method_small'
